Remove add exports.